--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
           <img src="images/buttons/nav.svg" alt="" />
         </div>
       </div>
+      <ul class="sidebar">
+        <li><a href="" class="nav-link">home</a></li>
+        <li><a href="" class="nav-link">shop</a></li>
+        <li><a href="" class="nav-link">product</a></li>
+        <li><a href="" class="nav-link">blog</a></li>
+        <li><a href="" class="nav-link">faq</a></li>
+      </ul>
     </nav>
     <section class="hero">
       <div class="hero-btns">
